fix: slight overflow on mobile and misc changes

--- a/css/index.css
+++ b/css/index.css
@@ -18,6 +18,10 @@ header {
   margin-top: 1rem;
 }
 
+.subheading {
+  padding-left: 1.25rem;
+}
+
 a {
   color: cornflowerblue;
   text-decoration: none;
@@ -130,13 +134,12 @@ figcaption a {
     font-size: 2.2rem;
   }
 
-  #intro,
   #about {
     width: min(500px, 100%);
   }
 
   #profile {
-    width: 90%;
+    width: min(500px, 100%);
     height: 10rem;
   }
 }
